<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!--    title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Entrants"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"  />

        <!--       <ImageView-->
        <!--           android:id="@+id/btn_send_notifications"-->
        <!--           android:layout_width="wrap_content"-->
        <!--           android:layout_height="wrap_content"-->
        <!--           android:src="@drawable/ic_notification_add_24dp_000000_fill0_wght400_grad0_opsz24"/>-->

    </LinearLayout>

    <!--        status options-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">


            <!--        all members currently in the event -->
            <LinearLayout
                android:id="@+id/btn_entrants_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingVertical="6dp"
                android:paddingHorizontal="8dp"
                android:layout_marginStart="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirmed"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <!--            total number of entrants currently in the Event-->
                <TextView
                    android:id="@+id/tv_event_entrants_confirmed_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(52)"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!--        waiting -->
            <LinearLayout
                android:id="@+id/btn_entrants_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingVertical="6dp"
                android:paddingHorizontal="8dp"
                android:layout_marginStart="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Waiting"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <!--            number of invitation have sent to entrants-->
                <TextView
                    android:id="@+id/tv_entrants_waiting_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(2000)"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!--        waiting-->
            <LinearLayout
                android:id="@+id/btn_entrants_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingVertical="6dp"
                android:paddingHorizontal="8dp"
                android:layout_marginStart="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selected"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <!--            number of invitation have sent to entrants-->
                <TextView
                    android:id="@+id/tv_entrants_selected_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(52)"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!--        cancled-->
            <LinearLayout
                android:id="@+id/btn_entrants_cancelled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancelled"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"/>

                <!--            number of invitation have sent to entrants-->
                <TextView
                    android:id="@+id/tv_entrants_cancelled_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(2000)"
                    android:textSize="12sp"
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select All"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <!--        Select All button -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/btn_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_send_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_add_24dp_000000_fill0_wght400_grad0_opsz24"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <!--    entrants list-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_event_entrant_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        />

</LinearLayout>