...
    android:orientation="vertical"
    tools:context="com.ualberta.eventlottery.organzier.OrganizerMainActivity"
    android:background="@color/white">


    <FrameLayout
        android:id="@+id/fragment_container_organizer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
...
